Update git repo

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   "env": {
     "GIT_REPO": {
       "description": "URL of a git repo to clone (optional)",
-      "required": false
+      "required": true
     },
     "PASSWORD": {
       "description": "Create a password to log in to code-server with",
